--- a/websites/sidepages/erdekessegek.html
+++ b/websites/sidepages/erdekessegek.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Érdekességek a Fortniteról</title>
+    <link rel="stylesheet" href="../mainpage/css/erdekessegek.css">
+    <title>Fortnite Érdekességek</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Fortnite Érdekességek</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#tortenet">A Fortnite Története</a></li>
+            <li><a href="#szereplok">Kedvenc Szereplők</a></li>
+            <li><a href="#rejtvenyek">Rejtélyes Rejtélyek</a></li>
+            <li><a href="../mainpage/mainpage.html">Vissza a kezdőoldalra</a></li>
+        </ul>
+    </nav>
+    <section id="tortenet">
+        <h2>A Fortnite Története</h2>
+        <p>Fortnite, az Epic Games által fejlesztett ingyenesen játszható battle royale játék, melyben a játékosoknak meg kell küzdeniük egymással az utolsó túlélő címért.</p>
+        <p>A játék 2017-ben jelent meg, és azóta folyamatosan frissül új szezonokkal, eseményekkel és tartalmakkal.</p>
+    </section>
+    <section id="szereplok">
+        <h2>Kedvenc Szereplők</h2>
+        <p>Fortnite számos karaktert és skin-t kínál a játékosoknak. Néhány ikonikus szereplő a játék történetéből:</p>
+        <ul>
+            <li>John Wick - A híres filmsorozat karaktere, akit a játékban is elérhetsz.</li>
+            <li>Jonesy - Az egyik legismertebb karakter, aki gyakran megjelenik a különböző szezonokban.</li>
+            <li>Reaper - A "John Wick" skin egyik változata, amely egy népszerű választás a játékosok körében.</li>
+        </ul>
+        <div class="image-container">
+            <img src="/img/john_wick.webp">
+            <img src="/img/jonesy.webp">
+        </div>
+    </section>
+    <section id="rejtvenyek">
+        <h2>Rejtélyes Rejtélyek</h2>
+        <p>A Fortnite világában gyakran találkozunk rejtélyes eseményekkel és történetelemekkel. Például:</p>
+        <p>Az egyes szezonok során titokzatos események zajlanak le, amelyeknek a végén változások történnek a térképen és a történetben.</p>
+        <p>A játékosok különféle rejtélyeket oldhatnak meg a térképen, amelyek extra jutalmakhoz vezetnek.</p>
+    </section>
+
+    <footer>
+        <p>&copy; Meng Balázs Sándor és Tóth Károly Attila</p>
+    </footer>
 </body>
 </html>
