--- a/websites/sidepages/fortnitemo.html
+++ b/websites/sidepages/fortnitemo.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Fortnite Magyarországon</title>
+    <link rel="stylesheet" href="../mainpage/css/fortnitemo.css">
 </head>
 <body>
-    asd
+    <header>
+        <h1>Fortnite Magyarországon</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#streamerek">Magyar Streamerek</a></li>
+            <li><a href="#esportok">Esportok</a></li>
+            <li><a href="#jatekosok">Játékosok Magyarországon</a></li>
+            <li><a href="../mainpage/mainpage.html">Vissza a kezdőoldalra</a></li>
+        </ul>
+    </nav>
+    <section id="streamerek">
+        <h2>Magyar Fortnite Streamerek</h2>
+        <p>Ismerd meg a legnépszerűbb magyar Fortnite streamereket, akik rendszeresen közvetítenek a Twitch-en vagy YouTube-on. Kövesd őket, és csatlakozz a közösségükhöz!</p>
+        <ul>
+            <li><a href="https://www.youtube.com/@Faki13" target="_blank">Faki</a> - Új stratégiákat tanulhatsz tőle minden héten.</li>
+            <li><a href="https://www.youtube.com/channel/UCff0OngpmLBrA187rPwA8Sg" target="_blank">Kriszhadvice</a> - Élvezd a vicces pillanatokat a játékban!</li>
+            <li><a href="https://www.youtube.com/c/G%C3%A9merPolisz" target="_blank">Hopkaplay</a> - A legjobb magyar játékos.</li>
+        </ul>
+        <div class="image-container">
+            <img src="/img/kriszhadvice.png">
+            <img src="/img/faki.jpg">
+        </div>
+    </section>
+    <section id="esportok">
+        <h2>Magyar Fortnite Esportok</h2>
+        <p>Tudj meg többet a magyar Fortnite esport csapatokról, akik képviselik hazánkat a nemzetközi és helyi versenyeken. Kövesd a csapatokat és szurkolj értük!</p>
+        <ul>
+            <li>Esport Csapat Alpha - Rendszeres résztvevője a nemzetközi Fortnite versenyeknek.</li>
+            <li>Esport Csapat Beta - Az esport szcéna egyik vezető csapata hazánkban.</li>
+            <li>Magyar Verseny 2024 - Nevezd be csapatodat és vegyél részt a magyar Fortnite versenyen!</li>
+        </ul>
+    </section>
+    <section id="jatekosok">
+        <h2>Játékosok Magyarországon</h2>
+        <p>Tudj meg többet a magyar Fortnite játékosokról és számokról. Jelenleg Magyarországon több ezer játékos játszik rendszeresen a Fortnite-ban!</p>
+        <p>Ha te is részese vagy ennek a közösségnek, csatlakozz hozzánk, és találkozz más szenvedélyes játékosokkal!</p>
+    </section>
+
+    <footer>
+        <p>&copy; Meng Balázs Sándor és Tóth Károly Attila</p>
+    </footer>
 </body>
 </html>
