--- a/websites/sidepages/fortnitemo.html
+++ b/websites/sidepages/fortnitemo.html
@@ -28,8 +28,8 @@
             <li><a href="https://www.youtube.com/c/G%C3%A9merPolisz" target="_blank">Hopkaplay</a> - A legjobb magyar játékos.</li>
         </ul>
         <div class="image-container">
-            <img src="/img/kriszhadvice.png">
-            <img src="/img/faki.jpg">
+            <img src="img/kriszhadvice.png">
+            <img src="img/faki.jpg">
         </div>
     </section>
     <section id="esportok">
