--- a/websites/mainpage/mainpage.html
+++ b/websites/mainpage/mainpage.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fortnite</title>
     <link rel="stylesheet" href="scss/main.css">
-
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&amp;display=swap" rel="stylesheet">
-    
 </head>
 <body>
-    <nav>
-        <h1>Fortnite</h1>
-        <h2>Sok szereplős online videójáték</h2>
-        <ul>
-            <li><a href="#story">Rövid története</a></li>
-            <li><a href="#hiresseg">Miért is ennyire híres?</a></li>
-            <li><a href="#tovabbi">További információk:</a></li>
-        </ul>
-    </nav>
+    <div class='container'>
+
+        <div id="navigation-bar">
+          <nav>
+            <h1>Fortnite</h1>
+            <h2>Sok szereplős online videójáték</h2>
+            <ul>
+              <li><a href=#story>Rövid története</a></li>
+              <li><a href=#hiresseg>Miért is ennyire híres?</a></li>
+              <li><a href=#tovabbi>További információk:</a></li>
+              <a href="#" id="menu-icon"></a>
+            </ul>
+          </nav>
+        </div>
     <header>
     </header>
     <main>
@@ -29,12 +31,10 @@
         <p>
             A Fortnite eredeti módja a Save The World, amely egy máig kedvelt kooperatív túlélős játék. Az Epic Games mikor látta, hogy a Battle Royale műfajjal mekkora sikereket lehet elérni – főként a PUBG esetében –, gyorsan nekilátott a saját Battle Royale játékának az fejlesztéséhez, amelyhez csupán a Save The World elemeit kellet kissé átalakítania. Ennek az eredményét láthatjuk a lenti Gameplay Trailerben.   
         </p>
-        <video controls width="500">
-            <source src="https://www.youtube.com/watch?v=WJW-bzXZM8M&ab_channel=PlayStation" type="video/webm" />
-            <source src="https://www.youtube.com/watch?v=WJW-bzXZM8M&ab_channel=PlayStation" type="video/mp4" />
-            Download the <a href="https://www.youtube.com/watch?v=WJW-bzXZM8M&ab_channel=PlayStation">WEBM</a>
-            or <a href="https://www.youtube.com/watch?v=WJW-bzXZM8M&ab_channel=PlayStation">MP4</a> video.
-           </video>
+        <video width="320" height="240" controls>
+            <source src="../../videos/FortniteTrailer.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
     </div>
     <div>
         <h2 id="hiresseg">
