Fontos változtatások finomítások
Hozzáadtam képeket, footert, megváltoztattam a videónak a bejövetelét, animációt helyeztem rá és a flexboxot is szerkesztettem.

--- a/websites/mainpage/mainpage.html
+++ b/websites/mainpage/mainpage.html
@@ -24,26 +24,28 @@
     <header>
     </header>
     <main>
-    <div>
+    <div id="tortenetes">
         <h2 id="story">
             Rövid története:
         </h2>
         <p>
             A Fortnite eredeti módja a Save The World, amely egy máig kedvelt kooperatív túlélős játék. Az Epic Games mikor látta, hogy a Battle Royale műfajjal mekkora sikereket lehet elérni – főként a PUBG esetében –, gyorsan nekilátott a saját Battle Royale játékának az fejlesztéséhez, amelyhez csupán a Save The World elemeit kellet kissé átalakítania. Ennek az eredményét láthatjuk a lenti Gameplay Trailerben.   
         </p>
-        <video width="320" height="240" controls>
+        <video width="500" height="500" controls>
             <source src="../../videos/FortniteTrailer.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
     </div>
-    <div>
+    <div id="kepes">
         <h2 id="hiresseg">
             Miért ennyire híres?:
         </h2>
         <p>
             A Fortnite Battle Royale internetes kulturális jelenséggé nőtte ki magát, számos híresség is megosztotta, hogy ő is játszik a játékkal, míg több sportoló Fortnite-táncokat utánzott a győzelmi ünnepléseik részeként. 2018 márciusában egy élő internetes közvetítés, amely alatt Ninja streamer Drake, Travis Scott, Kim Dotcom és JuJu Smith-Schuster Pittsburgh Steelers-wide receiver társaságában játszott a Fortnite Battle Royale-ral megdöntötte a Twitch nézettségi rekordját, aminek hatására az Epic 2018 júniusában a 2018-as E3 keretében egy Fortnite Battle Royale-pro–amet rendezett, melyben 50 streamerből és profi játékosból, illetve hírességből álló csapat vett részt. Az Epic Games szervezett e-sport-versenyeket alakított ki a Fortnite Battle Royale körül, köztük a 2019 júliusában megrendezett 30 millió dolláros fődíjazású Fortnite World Cupot is.
         </p>
-        <img id="crossover" src="../../img/f81w6fsn6pg61.jpg" alt="Crossoverek">
+        <img id="crossover1" src="../../img/f81w6fsn6pg61.jpg" alt="Crossoverek">
+        <img id="crossover2" src="../../img/fortnitecollab.png" alt="Crossoverek">
+        <img id="crossover3" src="../../img/Every-single-Fortnite-collab-crossover-in-battle-royales-history.jpg" alt="Crossoverek">
     </div>
     <div>
         <h2 id="tovabbi">
@@ -84,6 +86,9 @@
             </div>
     </div>
     </div>
+    <footer>
+        <p>&copy; Meng Balázs Sándor és Tóth Károly Attila</p>
+    </footer>
 </main>
 </body>
 </html>
