--- a/websites/sidepages/erdekessegek.html
+++ b/websites/sidepages/erdekessegek.html
@@ -32,8 +32,8 @@
             <li>Reaper - A "John Wick" skin egyik változata, amely egy népszerű választás a játékosok körében.</li>
         </ul>
         <div class="image-container">
-            <img src="/img/john_wick.webp">
-            <img src="/img/jonesy.webp">
+            <img src="../../img/john_wick.webp">
+            <img src="../../img/jonesy.webp">
         </div>
     </section>
     <section id="rejtvenyek">
